# Mcp_A2A_and_Beyond

./: README.md  client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
mcp files/: client.py  readme.md
